# APIException

./: .gitignore  404.html  README.md  index.html  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
advanced/logging/: index.html
advanced/rfc7807/: index.html
advanced/swagger/: index.html
api_exception/: __init__.py
changelog/: index.html
docs/: changelog.md  index.md
docs/advanced/: logging.md  rfc7807.md  swagger.md
docs/reference/: api.md
docs/usage/: custom_codes.md  quick_start.md  register_exception_handlers.md  response_model.md
examples/: example_usage.py  fastapi_rfc7807_usage.py  fastapi_usage.py  index.html  production_level.py
examples/advanced_examples/: README.md  app.py
installation/: index.html
reference/api/: index.html
search/: search_index.json
src/api_exception/: __init__.py  __main__.py  exception.py
tests/: test_exception.py
usage/custom_codes/: index.html
usage/fallback/: index.html
usage/quick_start/: index.html
usage/register_exception_handlers/: index.html
usage/response_model/: index.html
