[project]
name = "apiexception"

version = "0.2.0"
description = "Consistent JSON response formatting and exception & error handling for FastAPI applications"
authors = [
  {name = "Ahmet Kutay URAL", email = "ahmetkutayural@gmail.com"},
]
readme = "README.md"
license = "MIT"
keywords = ["fastapi", "exception", "error-handling", "json-response"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]

requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_exception"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-macros-plugin>=1.3.9",
    "mkdocs-material>=9.6.18",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "types-click>=7.1.8",
    "types-requests>=2.32.4.20250809",
    "uvicorn>=0.35.0",
]

[project.urls]
Documentation = "https://akutayural.github.io/APIException/"
Source = "https://github.com/akutayural/APIException"
"Bug Tracker" = "https://github.com/akutayural/APIException/issues"
Changelog = "https://github.com/akutayural/APIException/blob/main/docs/changelog.md"

[project.scripts]
api_exception = "api_exception.__main__:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
