[project]
name = "apiexception"
version = "0.2.1"
description = "Consistent JSON response formatting and exception & error handling for FastAPI applications"
readme = "README.md"
requires-python = ">=3.9"
liccnse = { text = "MIT" }
authors = [{ name = "Ahmet Kutay URAL", email = "ahmetkutayural@gmail.com" }]
keywords = ["fastapi", "exception", "error-handling", "json-response"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.115.4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Documentation = "https://akutayural.github.io/APIException/"
Source = "https://github.com/akutayural/APIException"
"Bug Tracker" = "https://github.com/akutayural/APIException/issues"
Changelog = "https://github.com/akutayural/APIException/blob/main/docs/changelog.md"

[project.scripts]
APIException-info = "api_exception.__main__:main"

[dependency-groups]
dev = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.16",
    "ruff==0.12.5",
    "setuptools>=80.9.0",
    "uvicorn>=0.32.0",
    "mypy>=1.17.1,<2.0.0",
    "types-requests>=2.32.4.20250809,<3.0.0",
    "types-click>=7.1.8,<8.0.0",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "api_exception" }
]

[tool.setuptools.package-data]
api_exception = ["py.typed"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
